libreria para generacion de docks

--- a/src/app/presentation/components/procedures/workflow-graph/workflow-graph.component.scss
+++ b/src/app/presentation/components/procedures/workflow-graph/workflow-graph.component.scss
@@ -1,7 +1,7 @@
-.example-header-image {
-  background-image: url('../../../../../assets/img/account.png');
-  background-size: cover;
-}
+// .example-header-image {
+//   background-image: url('../../../../../assets/img/account.png');
+//   background-size: cover;
+// }
 
 .example-tab-icon {
   margin-right: 8px;
