--- a/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
@@ -82,6 +82,10 @@
               <mat-icon>feed</mat-icon>
               <span>Hoja de ruta</span>
             </button>
+            <button mat-menu-item (click)="generateTemplate()">
+              <mat-icon>feed</mat-icon>
+              <span>Plantilla</span>
+            </button>
           </mat-menu>
         </td>
       </ng-container>
