--- a/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
+++ b/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
@@ -30,7 +30,7 @@
         </ng-container>
         <ng-container matColumnDef="reference">
           <th mat-header-cell *matHeaderCellDef>Referencia</th>
-          <td mat-cell *matCellDef="let row">
+          <td mat-cell *matCellDef="let row" class="sm:max-w-80">
             {{ row.reference }}
           </td>
         </ng-container>
