--- a/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
@@ -36,7 +36,7 @@
       <ng-container matColumnDef="applicant">
         <th mat-header-cell *matHeaderCellDef>Destinatario</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.receiver.fullname | titlecase }}
+          <!-- {{ element.recipient.fullname | titlecase }} -->
         </td>
       </ng-container>
       <ng-container matColumnDef="state">
