--- a/src/app/procedures/presentation/pages/internals-manage/internal-detail/internal-detail.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internal-detail/internal-detail.component.html
@@ -26,7 +26,7 @@
     <div class="py-4 sm:px-8">
       <div class="px-4 sm:px-0">
         <h3 class="text-base/7 font-semibold text-gray-900">
-          {{ procedure()?.type }}
+          <!-- {{ procedure()?.type }} -->
         </h3>
         <p class="mt-1 max-w-2xl text-sm/6 text-gray-500">
           {{ procedure()?.reference }}
@@ -73,13 +73,13 @@
                 <div class="flex flex-row">
                   <dt class="text-sm font-medium w-20">Nombre:</dt>
                   <dd class="text-sm">
-                    {{ procedure()?.emitter?.fullname | titlecase }}
+                    <!-- {{ procedure()?.emitter?.fullname | titlecase }} -->
                   </dd>
                 </div>
                 <div class="flex flex-row">
                   <dt class="text-sm font-medium w-20">Cargo:</dt>
                   <dd class="text-sm">
-                    {{ procedure()?.emitter?.jobtitle }}
+                    <!-- {{ procedure()?.emitter?.jobtitle }} -->
                   </dd>
                 </div>
               </div>
@@ -92,13 +92,13 @@
                 <div class="flex flex-row">
                   <dt class="text-sm font-medium w-20">Nombre:</dt>
                   <dd class="text-sm">
-                    {{ procedure()?.receiver?.fullname | titlecase }}
+                    <!-- {{ procedure()?.receiver?.fullname | titlecase }} -->
                   </dd>
                 </div>
                 <div class="flex flex-row">
                   <dt class="text-sm font-medium w-20">Cargo:</dt>
                   <dd class="text-sm">
-                    {{ procedure()?.receiver?.jobtitle }}
+                    <!-- {{ procedure()?.receiver?.jobtitle }} -->
                   </dd>
                 </div>
               </div>
