--- a/src/app/presentation/components/procedures/internal-detail/internal-detail.component.html
+++ b/src/app/presentation/components/procedures/internal-detail/internal-detail.component.html
@@ -24,16 +24,18 @@
                 <dl class="row">
                   <dt class="col-sm-4">ALTERNO:</dt>
                   <dd class="col-sm-8">{{ data.code }}</dd>
-    
+
                   <dt class="col-sm-4">CITE:</dt>
                   <dd class="col-sm-8">{{ data.citeCode }}</dd>
-    
+
                   <dt class="col-sm-4">ESTADO:</dt>
                   <dd class="col-sm-8">{{ data.state }}</dd>
-    
+
                   <dt class="col-sm-4">REGISTRO:</dt>
-                  <dd class="col-sm-8">{{ data.startDate | date : "short" }}</dd>
-    
+                  <dd class="col-sm-8">
+                    {{ data.startDate | date : "short" }}
+                  </dd>
+
                   @if(data.endDate){
                   <dt class="col-sm-4">CONCLUSION:</dt>
                   <dd class="col-sm-8">{{ data.endDate | date : "short" }}</dd>
@@ -44,7 +46,7 @@
                 <dl class="row">
                   <dt class="col-sm-2">TIPO DE TRAMITE:</dt>
                   <dd class="col-sm-10">{{ data.type | uppercase }}</dd>
-    
+
                   <dt class="col-sm-2">REFERENCIA:</dt>
                   <dd class="col-sm-10">{{ data.reference }}</dd>
 
@@ -59,7 +61,6 @@
                 </dl>
               </div>
             </div>
-           
           </div>
         </div>
         <div class="col-sm-6">
@@ -72,7 +73,6 @@
               <dt class="col-sm-3">CARGO:</dt>
               <dd class="col-sm-9">{{ data.details.remitente.cargo }}</dd>
             </dl>
-           
           </div>
         </div>
         <div class="col-sm-6">
