--- a/src/app/procedures/presentation/pages/internals-manage/internal-dialog/internal-dialog.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internal-dialog/internal-dialog.component.html
@@ -1,59 +1,65 @@
 <h2 mat-dialog-title>{{ data ? "Edicion" : "Creacion" }} Tramite Interno</h2>
 <mat-dialog-content>
   <form [formGroup]="formProcedure" class="pt-2">
+    @if (!data) { @if(!selectedDocProps()){
+    <alert-message
+      severity="info"
+      message="Esta hoja de ruta se creara sin cite"
+    />
+    }
     <select-search
       [items]="documents()"
       (onTyped)="searchDocuments($event)"
+      (onSelect)="onSelectDoc($event)"
       [autoFilter]="false"
+      title="Documento a adjuntar (CITE)"
+      placeholder="Selecciono un documento (Opcional)"
+      placeholderLabel="Referencia / Codigo"
     />
-
+    }
+    <div formGroupName="sender" class="flex gap-x-2">
+      <div class="flex-1">
+        <autocomplete
+          title="Remitente"
+          [items]="officers().sender"
+          [value]="formProcedure.get('sender.fullname')?.value"
+          (onTyped)="searchAccounts('sender', $event)"
+          (onSelect)="onSelectAcount('sender', $event)"
+        />
+      </div>
+      <div class="flex-1">
+        <mat-form-field>
+          <mat-label>Cargo</mat-label>
+          <input formControlName="jobtitle" matInput />
+        </mat-form-field>
+      </div>
+    </div>
+    <div formGroupName="recipient" class="flex gap-x-2">
+      <div class="flex-1">
+        <autocomplete
+          title="Destinatario"
+          [items]="officers().recipient"
+          [value]="formProcedure.get('recipient.fullname')?.value"
+          (onTyped)="searchAccounts('recipient', $event)"
+          (onSelect)="onSelectAcount('recipient', $event)"
+        />
+      </div>
+      <div class="flex-1">
+        <mat-form-field>
+          <mat-label>Cargo</mat-label>
+          <input formControlName="jobtitle" matInput />
+        </mat-form-field>
+      </div>
+    </div>
     <mat-form-field>
       <mat-label>Referencia del tramite</mat-label>
       <textarea formControlName="reference" matInput></textarea>
     </mat-form-field>
-    <div class="flex gap-x-2">
-      <mat-form-field>
-        <mat-label>Cite</mat-label>
-        <input formControlName="cite" matInput />
-      </mat-form-field>
+    <div class="sm:w-80">
       <mat-form-field>
         <mat-label>Cantidad: Hojas / Anexos</mat-label>
         <input formControlName="numberOfDocuments" matInput />
       </mat-form-field>
-    </div>
-    <div formGroupName="emitter" class="flex gap-x-2">
-      <div class="flex-1">
-        <autocomplete
-          title="Remitente"
-          [items]="officers().emitter"
-          [initialValue]="formProcedure.get('emitter.fullname')?.value"
-          (onTyped)="searchAccounts('emitter', $event)"
-          (onSelect)="selectAcount('emitter', $event)"
-        />
-      </div>
-      <div class="flex-1">
-        <mat-form-field>
-          <mat-label>Cargo</mat-label>
-          <input formControlName="jobtitle" matInput />
-        </mat-form-field>
-      </div>
-    </div>
-    <div formGroupName="receiver" class="flex gap-x-2">
-      <div class="flex-1">
-        <autocomplete
-          title="Destinatario"
-          [items]="officers().receiver"
-          [initialValue]="formProcedure.get('receiver.fullname')?.value"
-          (onTyped)="searchAccounts('receiver', $event)"
-          (onSelect)="selectAcount('receiver', $event)"
-        />
-      </div>
-      <div class="flex-1">
-        <mat-form-field>
-          <mat-label>Cargo</mat-label>
-          <input formControlName="jobtitle" matInput />
-        </mat-form-field>
-      </div>
     </div>
   </form>
 </mat-dialog-content>
