--- a/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
@@ -29,20 +29,14 @@
       </ng-container>
       <ng-container matColumnDef="reference">
         <th mat-header-cell *matHeaderCellDef>Referencia</th>
-        <td mat-cell *matCellDef="let element">
+        <td mat-cell *matCellDef="let element" class="sm:max-w-80">
           {{ element.reference }}
         </td>
       </ng-container>
       <ng-container matColumnDef="applicant">
         <th mat-header-cell *matHeaderCellDef>Destinatario</th>
         <td mat-cell *matCellDef="let element">
-          <!-- {{ element.recipient.fullname | titlecase }} -->
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef>Estado</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.state }}
+          {{ element.sender.fullname | titlecase }}
         </td>
       </ng-container>
       <ng-container matColumnDef="createdAt">
