--- a/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
@@ -21,8 +21,13 @@
     <table mat-table [dataSource]="datasource()">
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef>Alterno</th>
-        <td mat-cell *matCellDef="let element" [id]="element._id">
-          <a [routerLink]="['../internal', element._id]">
+        <td
+          mat-cell
+          *matCellDef="let element"
+          [id]="element._id"
+          class="sm:w-52"
+        >
+          <a [routerLink]="['../internal', element._id]" class="text-blue-600">
             {{ element.code }}
           </a>
         </td>
