--- a/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
+++ b/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
@@ -2,9 +2,75 @@
 <mat-dialog-content>
   <mat-stepper #stepper>
     <mat-step
+      label="Detalle envio"
+      [stepControl]="formSubmission"
+      errorMessage="Complete los campos"
+    >
+      <div class="py-3">
+        <dl>
+          <div class="px-4 sm:grid sm:grid-cols-4 sm:gap-2 sm:px-0">
+            <dt class="text-lg font-medium text-gray-900">Tramite:</dt>
+            <dd class="mt-1 text-lg text-gray-700 sm:col-span-3 sm:mt-0">
+              {{ data.procedure.code }} - ({{
+                data.isOriginal ? "Original" : "Copia"
+              }})
+            </dd>
+          </div>
+        </dl>
+      </div>
+      <form [formGroup]="formSubmission">
+        <div class="grid grid-cols-3 gap-x-2 mt-2">
+          <div class="col-span-3">
+            <mat-form-field>
+              <mat-label>Instruccion / Proveido</mat-label>
+              <textarea formControlName="reference" matInput required>
+              </textarea>
+              <mat-error *ngIf="formSubmission.controls['reference'].invalid">
+                Ingrese el motivo
+              </mat-error>
+            </mat-form-field>
+          </div>
+          @if(data.isOriginal && data.allowAttachDocument){
+          <div class="col-span-3">
+            <select-search
+              [items]="documents()"
+              (onTyped)="searchDocuments($event)"
+              (onSelect)="onSelectDoc($event)"
+              [autoFilter]="false"
+              title="Documento a adjuntar (CITE)"
+              placeholder="Selecciono un documento (Opcional)"
+              placeholderLabel="Referencia / Codigo"
+            />
+          </div>
+          }
+          <div>
+            <mat-form-field>
+              <mat-label>Cantidad: hojas / anexos</mat-label>
+              <input formControlName="attachmentsCount" matInput required />
+              <mat-error
+                *ngIf="formSubmission.controls['attachmentsCount'].invalid"
+              >
+                Ingrese la cantidad
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field>
+              <mat-label>Numero de registro interno</mat-label>
+              <input formControlName="internalNumber" matInput />
+            </mat-form-field>
+          </div>
+        </div>
+      </form>
+      <div class="flex justify-end mt-2">
+        <button mat-button matStepperNext>Siguiente</button>
+      </div>
+    </mat-step>
+    <mat-step
+      #stepRecipients
       label="Destinatarios"
-      [hasError]="recipients().length === 0"
-      errorMessage="Seleccione los destinatarios"
+      [hasError]="recipients().length === 0 && stepRecipients.interacted"
+      errorMessage="Sin destinatarios"
     >
       <div class="grid grid-cols-3 gap-x-2 mt-2">
         <div>
@@ -91,67 +157,17 @@
               <mat-icon>close</mat-icon>
             </button>
           </mat-list-item>
+          } @empty {
+          <mat-list-item> * Sin destinatarios </mat-list-item>
           }
         </mat-list>
       </div>
-      <div class="flex justify-end mt-2">
-        <button mat-button matStepperNext>Siguiente</button>
-      </div>
-    </mat-step>
-    <mat-step
-      label="Detalle envio"
-      [stepControl]="formSubmission"
-      errorMessage="Complete los campos"
-    >
-      <form [formGroup]="formSubmission">
-        <div class="grid grid-cols-3 gap-x-2 mt-2">
-          <div class="col-span-3">
-            <mat-form-field>
-              <mat-label>Instruccion / Proveido</mat-label>
-              <textarea formControlName="reference" matInput required>
-              </textarea>
-              <mat-error *ngIf="formSubmission.controls['reference'].invalid">
-                Ingrese el motivo
-              </mat-error>
-            </mat-form-field>
-          </div>
-          @if(data.isOriginal && !data.cite){
-          <div class="col-span-3">
-            <select-search
-              [items]="documents()"
-              (onTyped)="searchDocuments($event)"
-              (onSelect)="onSelectDoc($event)"
-              [autoFilter]="false"
-              title="Documento a adjuntar (CITE)"
-              placeholder="Selecciono un documento (Opcional)"
-              placeholderLabel="Referencia / Codigo"
-            />
-          </div>
-          }
-          <div>
-            <mat-form-field>
-              <mat-label>Cantidad: hojas / anexos</mat-label>
-              <input formControlName="attachmentsCount" matInput required />
-              <mat-error
-                *ngIf="formSubmission.controls['attachmentsCount'].invalid"
-              >
-                Ingrese la cantidad
-              </mat-error>
-            </mat-form-field>
-          </div>
-          <div>
-            <mat-form-field>
-              <mat-label>Numero de registro interno</mat-label>
-              <input formControlName="internalNumber" matInput />
-            </mat-form-field>
-          </div>
-        </div>
-      </form>
       <div class="flex justify-end mt-2">
         <button mat-button matStepperPrevious>Atras</button>
         <button mat-button matStepperNext>Siguiente</button>
       </div>
     </mat-step>
+
     <mat-step label="Archivos adjuntos" optional>
       <div class="flex justify-end mt-2">
         <button mat-button matStepperPrevious>Atras</button>
