--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -7,7 +7,7 @@
       mat-icon-button
       aria-label="Cancel"
       matTooltip="Cancelar"
-      (click)="cacelSelection()"
+      (click)="cancelSelection()"
     >
       <mat-icon> delete</mat-icon>
     </button>
@@ -77,7 +77,6 @@
             (change)="$event ? toggleAllRows() : null"
             [checked]="selection.hasValue() && isAllSelected()"
             [indeterminate]="selection.hasValue() && !isAllSelected()"
-            [aria-label]="checkboxLabel()"
           />
         </th>
         <td mat-cell *matCellDef="let row">
@@ -85,7 +84,6 @@
             (click)="$event.stopPropagation()"
             (change)="$event ? selection.toggle(row) : null"
             [checked]="selection.isSelected(row)"
-            [aria-label]="checkboxLabel(row)"
           />
         </td>
       </ng-container>
@@ -150,10 +148,7 @@
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <button
-              (click)="send(element)"
-              mat-menu-item
-            >
+            <button (click)="send(element)" mat-menu-item>
               <mat-icon>send</mat-icon>
               <span>Remitir</span>
             </button>
