--- a/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
@@ -19,6 +19,17 @@
 
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="datasource()">
+      <ng-container matColumnDef="send">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element" class="w-8">
+          @if(element.isActionable){
+          <mat-icon style="color: orangered">mark_email_unread </mat-icon>
+
+          } @else {
+          <mat-icon style="color: green">mark_email_read</mat-icon>
+          }
+        </td>
+      </ng-container>
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef>Alterno</th>
         <td
@@ -50,6 +61,7 @@
           {{ element.createdAt | date : "short" }}
         </td>
       </ng-container>
+
       <ng-container matColumnDef="options">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row" class="w-8">
@@ -63,7 +75,7 @@
           <mat-menu #menu="matMenu">
             <button
               mat-menu-item
-              [disabled]="!row.isEnable"
+              [disabled]="!row.isActionable"
               (click)="update(row)"
             >
               <mat-icon>edit</mat-icon>
@@ -71,7 +83,7 @@
             </button>
             <button
               mat-menu-item
-              [disabled]="!row.isEnable"
+              [disabled]="!row.isActionable"
               (click)="send(row)"
             >
               <mat-icon>send</mat-icon>
