--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -125,12 +125,12 @@
 
       <ng-container matColumnDef="recipient">
         <th mat-header-cell *matHeaderCellDef>Destinatario</th>
-        <td mat-cell *matCellDef="let element">
-          <div class="flex flex-col gap-y-1">
+        <td mat-cell *matCellDef="let element" class="sm:max-w-80">
+          <div class="flex flex-col py-2">
             <div>Para: {{ element.recipient.fullname | titlecase }}</div>
             @if(element.actionLog){
             <div class="text-red-600">
-              {{ element.actionLog.manager | titlecase }}:
+              {{ element.actionLog.fullname | titlecase }}:
               <span class="font-bold">
                 {{ element.actionLog.description }}
               </span>
